fixed z-index issue of avatar

--- a/src/Explore/Activities/styles.css
+++ b/src/Explore/Activities/styles.css
@@ -58,4 +58,5 @@
 
 .__chip {
   margin: 4;
+  z-index: 0!important;
 }
